Integrate Jupyter notebook with systemd service

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -19,6 +19,10 @@
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mergeFoldersModal">
             Merge Folders
         </button>
+        <!-- Jupyter Notebook Button -->
+        <a href="{{ url_for('jupyter_notebook') }}" class="btn btn-success">
+            <i class="fas fa-book-open"></i> Open RWB Jupyter Notebook
+        </a>
     </div>
 
     <!-- Display total number of schemas and disk space information -->
