jupyter notebook fix and print log of plots

--- a/templates/input_form_merge.html
+++ b/templates/input_form_merge.html
@@ -20,6 +20,7 @@
             <label for="state_pattern">Select a State Pattern:</label>
             <select class="form-control" name="state_pattern" id="state_pattern" required>
                 <option value="" disabled selected>Select a pattern</option>
+                <option value="3x4_4states_debug">3x4_4states_debug</option>
                 <option value="1296x64_rowbar_4states">1296x64_rowbar_4states</option>
                 <option value="248x248_checkerboard_4states">248x248_checkerboard_4states</option>
                 <option value="1296x64_Adrien_random_4states">1296x64_Adrien_random_4states</option>
