Users need separate Jupyter notebooks

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -20,8 +20,8 @@
             Merge Folders
         </button>
         <!-- Jupyter Notebook Button -->
-        <a href="{{ url_for('jupyter_notebook') }}" class="btn btn-success">
-            <i class="fas fa-book-open"></i> Open RWB Jupyter Notebook
+        <a href="{{ url_for('notebook_selector') }}" class="btn btn-success">
+            <i class="fas fa-book-open"></i> Open Jupyter Notebooks
         </a>
     </div>
 
