Test ssh connections to testers

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -23,6 +23,10 @@
         <a href="{{ url_for('notebook_selector') }}" class="btn btn-success">
             <i class="fas fa-book-open"></i> Open Jupyter Notebooks
         </a>
+        <!-- Test Machines SSH Button -->
+        <a href="{{ url_for('test_machines') }}" class="btn btn-warning">
+            <i class="fas fa-terminal"></i> Test Machines SSH
+        </a>
     </div>
 
     <!-- Display total number of schemas and disk space information -->
